--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <footer class="footer">
         <p class="copyright">© 2023 akaz,GREEN,Toufu_Studio,solsaliente,Ki2ne,KiBUNE. All Rights Reserved.</p>
         <ul class="md-flex">
-            <li><a href="./pages/about/about.html">About Me</a></li>
-            <li><a href="https://github.com/akazdayo/Bingo">GitHub</a></li>
-            <li><a href="https://github.com/akazdayo/Bingo/blob/main/LICENSE">License</a></li>
+            <li><a href="./pages/about/about.html" target="_blank">About Me</a></li>
+            <li><a href="https://github.com/akazdayo/Bingo" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/akazdayo/Bingo/blob/main/LICENSE" target="_blank">License</a></li>
         </ul>
     </footer>
 </body>
